# arborium

./: .gitignore  Cargo.toml  DEVELOP.md  GRAMMARS.toml  PUBLISH.md  README.md  knope.toml  npm-trusted-publisher.user.js  version.json
.cargo-husky/hooks/: pre-commit
.github/docker/: Dockerfile.plugin-builder
.github/workflows/: ci.yml
crates/arborium/: Cargo.toml
crates/arborium-ada/: Cargo.toml
crates/arborium-agda/: Cargo.toml
crates/arborium-asm/: Cargo.toml
crates/arborium-awk/: Cargo.toml  info.toml
crates/arborium-bash/: Cargo.toml  info.toml
crates/arborium-batch/: Cargo.toml  info.toml
crates/arborium-c/: Cargo.toml  info.toml
crates/arborium-c-sharp/: Cargo.toml
crates/arborium-caddy/: Cargo.toml  info.toml
crates/arborium-capnp/: Cargo.toml  info.toml
crates/arborium-clojure/: Cargo.toml
crates/arborium-cmake/: Cargo.toml  info.toml
crates/arborium-commonlisp/: Cargo.toml  info.toml
crates/arborium-cpp/: Cargo.toml
crates/arborium-css/: Cargo.toml  info.toml
crates/arborium-d/: Cargo.toml  info.toml
crates/arborium-dart/: Cargo.toml
crates/arborium-devicetree/: Cargo.toml  info.toml
crates/arborium-diff/: Cargo.toml
crates/arborium-dockerfile/: Cargo.toml
crates/arborium-docsrs-demo/: Cargo.toml  README.md  arborium-header.html
crates/arborium-dot/: Cargo.toml  info.toml
crates/arborium-elisp/: Cargo.toml
crates/arborium-elixir/: Cargo.toml
crates/arborium-elm/: Cargo.toml  info.toml
crates/arborium-erlang/: Cargo.toml
crates/arborium-fish/: Cargo.toml
crates/arborium-fsharp/: Cargo.toml  grammar-crate-config.toml
crates/arborium-gleam/: Cargo.toml  info.toml
crates/arborium-glsl/: Cargo.toml  info.toml
crates/arborium-go/: Cargo.toml  info.toml
crates/arborium-graphql/: Cargo.toml  info.toml
crates/arborium-haskell/: Cargo.toml  info.toml
crates/arborium-hcl/: Cargo.toml  info.toml
crates/arborium-highlight/: Cargo.stpl.toml  Cargo.toml
crates/arborium-hlsl/: Cargo.toml  arborium.kdl  info.toml
crates/arborium-host/: Cargo.toml
crates/arborium-html/: Cargo.toml  info.toml
crates/arborium-idris/: Cargo.toml
crates/arborium-ini/: Cargo.toml  info.toml
crates/arborium-interface/: Cargo.toml  build.rs
crates/arborium-java/: Cargo.toml
crates/arborium-javascript/: Cargo.toml  info.toml
crates/arborium-jinja2/: Cargo.toml  info.toml
crates/arborium-jq/: Cargo.toml  info.toml
crates/arborium-json/: Cargo.toml  info.toml
crates/arborium-julia/: Cargo.toml  info.toml
crates/arborium-kdl/: Cargo.toml
crates/arborium-kotlin/: info.toml
crates/arborium-lean/: Cargo.toml  info.toml
crates/arborium-lua/: Cargo.toml
crates/arborium-markdown/: info.toml
crates/arborium-matlab/: Cargo.toml
crates/arborium-meson/: Cargo.toml  info.toml
crates/arborium-nginx/: Cargo.toml  info.toml
crates/arborium-ninja/: Cargo.toml
crates/arborium-nix/: Cargo.toml
crates/arborium-objc/: Cargo.toml  info.toml
crates/arborium-ocaml/: info.toml
crates/arborium-perl/: Cargo.toml  info.toml
crates/arborium-php/: Cargo.toml  info.toml
crates/arborium-plugin-runtime/: Cargo.toml
crates/arborium-postscript/: Cargo.toml  info.toml
crates/arborium-powershell/: Cargo.toml  info.toml
crates/arborium-prolog/: Cargo.toml  info.toml
crates/arborium-python/: Cargo.toml
crates/arborium-query/: Cargo.toml
crates/arborium-r/: Cargo.toml  info.toml
crates/arborium-rescript/: Cargo.toml  info.toml
crates/arborium-ron/: Cargo.toml  info.toml
crates/arborium-ruby/: Cargo.toml  info.toml
crates/arborium-rust/: Cargo.toml  info.toml
crates/arborium-rustdoc/: Cargo.toml
crates/arborium-scala/: Cargo.toml  info.toml
crates/arborium-scheme/: info.toml
crates/arborium-scss/: Cargo.toml  info.toml
crates/arborium-sparql/: Cargo.toml
crates/arborium-sql/: Cargo.toml  info.toml
crates/arborium-ssh-config/: Cargo.toml
crates/arborium-starlark/: Cargo.toml  info.toml
crates/arborium-svelte/: Cargo.toml  info.toml
crates/arborium-swift/: info.toml
crates/arborium-sysroot/: Cargo.toml  build.rs
crates/arborium-test-harness/: Cargo.toml
crates/arborium-textproto/: Cargo.toml
crates/arborium-theme/: Cargo.toml  README.md
crates/arborium-thrift/: Cargo.toml  info.toml
crates/arborium-tlaplus/: Cargo.toml  info.toml
crates/arborium-toml/: Cargo.toml  info.toml
crates/arborium-tree-sitter/: Cargo.toml
crates/arborium-tree-sitter/language/: Cargo.toml
crates/arborium-tsx/: info.toml
crates/arborium-type/: Cargo.toml  build.rs
crates/arborium-typescript/: info.toml
crates/arborium-typst/: Cargo.toml  info.toml
crates/arborium-uiua/: Cargo.toml
crates/arborium-vb/: Cargo.toml  info.toml
crates/arborium-verilog/: Cargo.toml  info.toml
crates/arborium-vhdl/: Cargo.toml  info.toml
crates/arborium-vim/: Cargo.toml  info.toml
crates/arborium-vue/: Cargo.toml  info.toml
crates/arborium-wasm/: info.toml
crates/arborium-wire/: Cargo.toml
crates/arborium-x86asm/: Cargo.toml  info.toml
crates/arborium-x86asm/src/: lib.rs
crates/arborium-xml/: Cargo.toml  info.toml
crates/arborium-yaml/: Cargo.toml  info.toml
crates/arborium-yuri/: Cargo.toml  build.rs
crates/arborium-zig/: Cargo.toml  info.toml
crates/arborium-zsh/: Cargo.toml  build.rs  info.toml
crates/miette-arborium/: Cargo.stpl.toml  Cargo.toml
demo/: .icon-cache.json  app.js  iife-demo-local.html  iife-demo.html  iife-demo.stpl.html  index.html  index.stpl.html  plugins.json  registry.json  rustdoc-comparison.html  styles.css  template.html
demo/examples/: rust.rs
demo/pkg/: app.generated.js  host.core.wasm  host.core3.wasm  host.core4.wasm  host.d.ts  host.js  host.wasm  themes.generated.css
demo/src/: lib.rs
grammars/tree-sitter-asm/: grammar-crate-config.toml
grammars/tree-sitter-query/: grammar-crate-config.toml
grammars/tree-sitter-typst/: grammar-crate-config.toml
grammars/tree-sitter-vim/: grammar-crate-config.toml
grammars/tree-sitter-yuri/: README.md  package.json
langs/: Cargo.toml  plugins.json
scripts/: prepare-website.sh
xtask/: Cargo.toml
(+325 files in other folders)
