[workspace]
resolver = "3"
members = [
    "crates/arborium",
    "crates/arborium-test-harness",
    "crates/arborium-ada",
    "crates/arborium-agda",
    "crates/arborium-asm",
    "crates/arborium-asciidoc",
    "crates/arborium-asciidoc_inline",
    "crates/arborium-awk",
    "crates/arborium-bash",
    "crates/arborium-batch",
    "crates/arborium-c",
    "crates/arborium-c-sharp",
    "crates/arborium-caddy",
    "crates/arborium-capnp",
    "crates/arborium-clojure",
    "crates/arborium-cmake",
    "crates/arborium-commonlisp",
    "crates/arborium-cpp",
    "crates/arborium-css",
    "crates/arborium-d",
    "crates/arborium-dart",
    "crates/arborium-devicetree",
    "crates/arborium-diff",
    "crates/arborium-dockerfile",
    "crates/arborium-dot",
    "crates/arborium-elisp",
    "crates/arborium-elixir",
    "crates/arborium-elm",
    "crates/arborium-erlang",
    "crates/arborium-fish",
    "crates/arborium-fsharp",
    "crates/arborium-gleam",
    "crates/arborium-glsl",
    "crates/arborium-go",
    "crates/arborium-graphql",
    "crates/arborium-haskell",
    "crates/arborium-hcl",
    "crates/arborium-hlsl",
    "crates/arborium-html",
    "crates/arborium-idris",
    "crates/arborium-ini",
    "crates/arborium-java",
    "crates/arborium-javascript",
    "crates/arborium-jinja2",
    "crates/arborium-jq",
    "crates/arborium-json",
    "crates/arborium-julia",
    "crates/arborium-kdl",
    "crates/arborium-kotlin",
    "crates/arborium-lean",
    "crates/arborium-lua",
    "crates/arborium-markdown",
    "crates/arborium-markdown-inline",
    "crates/arborium-matlab",
    "crates/arborium-meson",
    "crates/arborium-nginx",
    "crates/arborium-ninja",
    "crates/arborium-nix",
    "crates/arborium-objc",
    "crates/arborium-ocaml",
    "crates/arborium-perl",
    "crates/arborium-php",
    "crates/arborium-postscript",
    "crates/arborium-powershell",
    "crates/arborium-prolog",
    "crates/arborium-python",
    "crates/arborium-query",
    "crates/arborium-r",
    "crates/arborium-rescript",
    "crates/arborium-ron",
    "crates/arborium-ruby",
    "crates/arborium-rust",
    "crates/arborium-scala",
    "crates/arborium-scheme",
    "crates/arborium-scss",
    "crates/arborium-sparql",
    "crates/arborium-sql",
    "crates/arborium-ssh-config",
    "crates/arborium-starlark",
    "crates/arborium-svelte",
    "crates/arborium-swift",
    "crates/arborium-textproto",
    "crates/arborium-thrift",
    "crates/arborium-tlaplus",
    "crates/arborium-toml",
    "crates/arborium-tsx",
    "crates/arborium-typescript",
    "crates/arborium-typst",
    "crates/arborium-uiua",
    "crates/arborium-vb",
    "crates/arborium-verilog",
    "crates/arborium-vhdl",
    "crates/arborium-vue",
    "crates/arborium-x86asm",
    "crates/arborium-xml",
    "crates/arborium-yaml",
    "crates/arborium-yuri",
    "crates/arborium-zig",
    "crates/arborium-zsh",
    "crates/miette-arborium",
    "crates/arborium-wire",
    "crates/arborium-plugin-runtime",
    "demo",
    "tree-sitter",
    "tree-sitter/language",
    "tree-sitter-highlight",
]

# xtask is excluded so it doesn't rebuild when grammar crates change
# Plugin crates are excluded - they must be built with cargo-component
exclude = [
    "xtask",
    "crates/arborium-rust-plugin",
    "crates/arborium-html-plugin",
    "crates/arborium-javascript-plugin",
    "crates/arborium-host",
    "crates/arborium-ada-plugin",
    "crates/arborium-agda-plugin",
    "crates/arborium-asciidoc-plugin",
    "crates/arborium-clojure-plugin",
    "crates/arborium-asciidoc_inline-plugin",
    "crates/arborium-idris-plugin",
    "crates/arborium-dart-plugin",
    "crates/arborium-meson-plugin",
    "crates/arborium-bash-plugin",
    "crates/arborium-ninja-plugin",
    "crates/arborium-python-plugin",
    "crates/arborium-scala-plugin",
    "crates/arborium-c-plugin",
    "crates/arborium-elm-plugin",
    "crates/arborium-fish-plugin",
    "crates/arborium-batch-plugin",
    "crates/arborium-ocaml-plugin",
    "crates/arborium-erlang-plugin",
    "crates/arborium-yuri-plugin",
    "crates/arborium-sparql-plugin",
    "crates/arborium-nginx-plugin",
    "crates/arborium-toml-plugin",
    "crates/arborium-json-plugin",
    "crates/arborium-dot-plugin",
    "crates/arborium-matlab-plugin",
    "crates/arborium-haskell-plugin",
    "crates/arborium-commonlisp-plugin",
    "crates/arborium-yaml-plugin",
    "crates/arborium-hcl-plugin",
    "crates/arborium-zig-plugin",
]

[workspace.dependencies]
arborium = { path = "crates/arborium", version = "0.1.3" }
arborium-ada = { path = "crates/arborium-ada", version = "0.1.3" }
arborium-ada-plugin = { path = "crates/arborium-ada-plugin", version = "0.1.3" }
arborium-agda = { path = "crates/arborium-agda", version = "0.1.3" }
arborium-agda-plugin = { path = "crates/arborium-agda-plugin", version = "0.1.3" }
arborium-asciidoc = { path = "crates/arborium-asciidoc", version = "0.1.3" }
arborium-asciidoc-plugin = { path = "crates/arborium-asciidoc-plugin", version = "0.1.3" }
arborium-asciidoc_inline = { path = "crates/arborium-asciidoc_inline", version = "0.1.3" }
arborium-asciidoc_inline-plugin = { path = "crates/arborium-asciidoc_inline-plugin", version = "0.1.3" }
arborium-asm = { path = "crates/arborium-asm", version = "0.1.3" }
arborium-asm-plugin = { path = "crates/arborium-asm-plugin", version = "0.1.3" }
arborium-awk = { path = "crates/arborium-awk", version = "0.1.3" }
arborium-awk-plugin = { path = "crates/arborium-awk-plugin", version = "0.1.3" }
arborium-bash = { path = "crates/arborium-bash", version = "0.1.3" }
arborium-bash-plugin = { path = "crates/arborium-bash-plugin", version = "0.1.3" }
arborium-batch = { path = "crates/arborium-batch", version = "0.1.3" }
arborium-batch-plugin = { path = "crates/arborium-batch-plugin", version = "0.1.3" }
arborium-c = { path = "crates/arborium-c", version = "0.1.3" }
arborium-c-plugin = { path = "crates/arborium-c-plugin", version = "0.1.3" }
arborium-c-sharp = { path = "crates/arborium-c-sharp", version = "0.1.3" }
arborium-c-sharp-plugin = { path = "crates/arborium-c-sharp-plugin", version = "0.1.3" }
arborium-caddy = { path = "crates/arborium-caddy", version = "0.1.3" }
arborium-caddy-plugin = { path = "crates/arborium-caddy-plugin", version = "0.1.3" }
arborium-capnp = { path = "crates/arborium-capnp", version = "0.1.3" }
arborium-capnp-plugin = { path = "crates/arborium-capnp-plugin", version = "0.1.3" }
arborium-clojure = { path = "crates/arborium-clojure", version = "0.1.3" }
arborium-clojure-plugin = { path = "crates/arborium-clojure-plugin", version = "0.1.3" }
arborium-cmake = { path = "crates/arborium-cmake", version = "0.1.3" }
arborium-cmake-plugin = { path = "crates/arborium-cmake-plugin", version = "0.1.3" }
arborium-commonlisp = { path = "crates/arborium-commonlisp", version = "0.1.3" }
arborium-commonlisp-plugin = { path = "crates/arborium-commonlisp-plugin", version = "0.1.3" }
arborium-cpp = { path = "crates/arborium-cpp", version = "0.1.3" }
arborium-cpp-plugin = { path = "crates/arborium-cpp-plugin", version = "0.1.3" }
arborium-css = { path = "crates/arborium-css", version = "0.1.3" }
arborium-css-plugin = { path = "crates/arborium-css-plugin", version = "0.1.3" }
arborium-d = { path = "crates/arborium-d", version = "0.1.3" }
arborium-dart = { path = "crates/arborium-dart", version = "0.1.3" }
arborium-dart-plugin = { path = "crates/arborium-dart-plugin", version = "0.1.3" }
arborium-devicetree = { path = "crates/arborium-devicetree", version = "0.1.3" }
arborium-devicetree-plugin = { path = "crates/arborium-devicetree-plugin", version = "0.1.3" }
arborium-diff = { path = "crates/arborium-diff", version = "0.1.3" }
arborium-diff-plugin = { path = "crates/arborium-diff-plugin", version = "0.1.3" }
arborium-dockerfile = { path = "crates/arborium-dockerfile", version = "0.1.3" }
arborium-dockerfile-plugin = { path = "crates/arborium-dockerfile-plugin", version = "0.1.3" }
arborium-dot = { path = "crates/arborium-dot", version = "0.1.3" }
arborium-dot-plugin = { path = "crates/arborium-dot-plugin", version = "0.1.3" }
arborium-elisp = { path = "crates/arborium-elisp", version = "0.1.3" }
arborium-elisp-plugin = { path = "crates/arborium-elisp-plugin", version = "0.1.3" }
arborium-elixir = { path = "crates/arborium-elixir", version = "0.1.3" }
arborium-elixir-plugin = { path = "crates/arborium-elixir-plugin", version = "0.1.3" }
arborium-elm = { path = "crates/arborium-elm", version = "0.1.3" }
arborium-elm-plugin = { path = "crates/arborium-elm-plugin", version = "0.1.3" }
arborium-erlang = { path = "crates/arborium-erlang", version = "0.1.3" }
arborium-erlang-plugin = { path = "crates/arborium-erlang-plugin", version = "0.1.3" }
arborium-fish = { path = "crates/arborium-fish", version = "0.1.3" }
arborium-fish-plugin = { path = "crates/arborium-fish-plugin", version = "0.1.3" }
arborium-fsharp = { path = "crates/arborium-fsharp", version = "0.1.3" }
arborium-gleam = { path = "crates/arborium-gleam", version = "0.1.3" }
arborium-gleam-plugin = { path = "crates/arborium-gleam-plugin", version = "0.1.3" }
arborium-glsl = { path = "crates/arborium-glsl", version = "0.1.3" }
arborium-glsl-plugin = { path = "crates/arborium-glsl-plugin", version = "0.1.3" }
arborium-go = { path = "crates/arborium-go", version = "0.1.3" }
arborium-go-plugin = { path = "crates/arborium-go-plugin", version = "0.1.3" }
arborium-graphql = { path = "crates/arborium-graphql", version = "0.1.3" }
arborium-graphql-plugin = { path = "crates/arborium-graphql-plugin", version = "0.1.3" }
arborium-haskell = { path = "crates/arborium-haskell", version = "0.1.3" }
arborium-haskell-plugin = { path = "crates/arborium-haskell-plugin", version = "0.1.3" }
arborium-hcl = { path = "crates/arborium-hcl", version = "0.1.3" }
arborium-hcl-plugin = { path = "crates/arborium-hcl-plugin", version = "0.1.3" }
arborium-hlsl = { path = "crates/arborium-hlsl", version = "0.1.3" }
arborium-host = { path = "crates/arborium-host", version = "0.1.3" }
arborium-html = { path = "crates/arborium-html", version = "0.1.3" }
arborium-html-plugin = { path = "crates/arborium-html-plugin", version = "0.1.3" }
arborium-idris = { path = "crates/arborium-idris", version = "0.1.3" }
arborium-idris-plugin = { path = "crates/arborium-idris-plugin", version = "0.1.3" }
arborium-ini = { path = "crates/arborium-ini", version = "0.1.3" }
arborium-ini-plugin = { path = "crates/arborium-ini-plugin", version = "0.1.3" }
arborium-java = { path = "crates/arborium-java", version = "0.1.3" }
arborium-java-plugin = { path = "crates/arborium-java-plugin", version = "0.1.3" }
arborium-javascript = { path = "crates/arborium-javascript", version = "0.1.3" }
arborium-javascript-plugin = { path = "crates/arborium-javascript-plugin", version = "0.1.3" }
arborium-jinja2 = { path = "crates/arborium-jinja2", version = "0.1.3" }
arborium-jinja2-plugin = { path = "crates/arborium-jinja2-plugin", version = "0.1.3" }
arborium-jq = { path = "crates/arborium-jq", version = "0.1.3" }
arborium-jq-plugin = { path = "crates/arborium-jq-plugin", version = "0.1.3" }
arborium-json = { path = "crates/arborium-json", version = "0.1.3" }
arborium-json-plugin = { path = "crates/arborium-json-plugin", version = "0.1.3" }
arborium-julia = { path = "crates/arborium-julia", version = "0.1.3" }
arborium-julia-plugin = { path = "crates/arborium-julia-plugin", version = "0.1.3" }
arborium-kdl = { path = "crates/arborium-kdl", version = "0.1.3" }
arborium-kdl-plugin = { path = "crates/arborium-kdl-plugin", version = "0.1.3" }
arborium-kotlin = { path = "crates/arborium-kotlin", version = "0.1.3" }
arborium-lean = { path = "crates/arborium-lean", version = "0.1.3" }
arborium-lua = { path = "crates/arborium-lua", version = "0.1.3" }
arborium-lua-plugin = { path = "crates/arborium-lua-plugin", version = "0.1.3" }
arborium-markdown = { path = "crates/arborium-markdown", version = "0.1.3" }
arborium-markdown-inline = { path = "crates/arborium-markdown-inline", version = "0.1.3" }
arborium-markdown-plugin = { path = "crates/arborium-markdown-plugin", version = "0.1.3" }
arborium-markdown_inline-plugin = { path = "crates/arborium-markdown_inline-plugin", version = "0.1.3" }
arborium-matlab = { path = "crates/arborium-matlab", version = "0.1.3" }
arborium-matlab-plugin = { path = "crates/arborium-matlab-plugin", version = "0.1.3" }
arborium-meson = { path = "crates/arborium-meson", version = "0.1.3" }
arborium-meson-plugin = { path = "crates/arborium-meson-plugin", version = "0.1.3" }
arborium-nginx = { path = "crates/arborium-nginx", version = "0.1.3" }
arborium-nginx-plugin = { path = "crates/arborium-nginx-plugin", version = "0.1.3" }
arborium-ninja = { path = "crates/arborium-ninja", version = "0.1.3" }
arborium-ninja-plugin = { path = "crates/arborium-ninja-plugin", version = "0.1.3" }
arborium-nix = { path = "crates/arborium-nix", version = "0.1.3" }
arborium-nix-plugin = { path = "crates/arborium-nix-plugin", version = "0.1.3" }
arborium-objc = { path = "crates/arborium-objc", version = "0.1.3" }
arborium-objc-plugin = { path = "crates/arborium-objc-plugin", version = "0.1.3" }
arborium-ocaml = { path = "crates/arborium-ocaml", version = "0.1.3" }
arborium-ocaml-plugin = { path = "crates/arborium-ocaml-plugin", version = "0.1.3" }
arborium-perl = { path = "crates/arborium-perl", version = "0.1.3" }
arborium-perl-plugin = { path = "crates/arborium-perl-plugin", version = "0.1.3" }
arborium-php = { path = "crates/arborium-php", version = "0.1.3" }
arborium-php-plugin = { path = "crates/arborium-php-plugin", version = "0.1.3" }
arborium-plugin-runtime = { path = "crates/arborium-plugin-runtime", version = "0.1.3" }
arborium-postscript = { path = "crates/arborium-postscript", version = "0.1.3" }
arborium-postscript-plugin = { path = "crates/arborium-postscript-plugin", version = "0.1.3" }
arborium-powershell = { path = "crates/arborium-powershell", version = "0.1.3" }
arborium-powershell-plugin = { path = "crates/arborium-powershell-plugin", version = "0.1.3" }
arborium-prolog = { path = "crates/arborium-prolog", version = "0.1.3" }
arborium-prolog-plugin = { path = "crates/arborium-prolog-plugin", version = "0.1.3" }
arborium-python = { path = "crates/arborium-python", version = "0.1.3" }
arborium-python-plugin = { path = "crates/arborium-python-plugin", version = "0.1.3" }
arborium-query = { path = "crates/arborium-query", version = "0.1.3" }
arborium-query-plugin = { path = "crates/arborium-query-plugin", version = "0.1.3" }
arborium-r = { path = "crates/arborium-r", version = "0.1.3" }
arborium-r-plugin = { path = "crates/arborium-r-plugin", version = "0.1.3" }
arborium-rescript = { path = "crates/arborium-rescript", version = "0.1.3" }
arborium-rescript-plugin = { path = "crates/arborium-rescript-plugin", version = "0.1.3" }
arborium-ron = { path = "crates/arborium-ron", version = "0.1.3" }
arborium-ron-plugin = { path = "crates/arborium-ron-plugin", version = "0.1.3" }
arborium-ruby = { path = "crates/arborium-ruby", version = "0.1.3" }
arborium-ruby-plugin = { path = "crates/arborium-ruby-plugin", version = "0.1.3" }
arborium-rust = { path = "crates/arborium-rust", version = "0.1.3" }
arborium-rust-plugin = { path = "crates/arborium-rust-plugin", version = "0.1.3" }
arborium-scala = { path = "crates/arborium-scala", version = "0.1.3" }
arborium-scala-plugin = { path = "crates/arborium-scala-plugin", version = "0.1.3" }
arborium-scheme = { path = "crates/arborium-scheme", version = "0.1.3" }
arborium-scheme-plugin = { path = "crates/arborium-scheme-plugin", version = "0.1.3" }
arborium-scss = { path = "crates/arborium-scss", version = "0.1.3" }
arborium-scss-plugin = { path = "crates/arborium-scss-plugin", version = "0.1.3" }
arborium-sparql = { path = "crates/arborium-sparql", version = "0.1.3" }
arborium-sparql-plugin = { path = "crates/arborium-sparql-plugin", version = "0.1.3" }
arborium-sql = { path = "crates/arborium-sql", version = "0.1.3" }
arborium-ssh-config = { path = "crates/arborium-ssh-config", version = "0.1.3" }
arborium-ssh-config-plugin = { path = "crates/arborium-ssh-config-plugin", version = "0.1.3" }
arborium-starlark = { path = "crates/arborium-starlark", version = "0.1.3" }
arborium-starlark-plugin = { path = "crates/arborium-starlark-plugin", version = "0.1.3" }
arborium-svelte = { path = "crates/arborium-svelte", version = "0.1.3" }
arborium-svelte-plugin = { path = "crates/arborium-svelte-plugin", version = "0.1.3" }
arborium-swift = { path = "crates/arborium-swift", version = "0.1.3" }
arborium-swift-plugin = { path = "crates/arborium-swift-plugin", version = "0.1.3" }
arborium-textproto = { path = "crates/arborium-textproto", version = "0.1.3" }
arborium-textproto-plugin = { path = "crates/arborium-textproto-plugin", version = "0.1.3" }
arborium-thrift = { path = "crates/arborium-thrift", version = "0.1.3" }
arborium-thrift-plugin = { path = "crates/arborium-thrift-plugin", version = "0.1.3" }
arborium-tlaplus = { path = "crates/arborium-tlaplus", version = "0.1.3" }
arborium-toml = { path = "crates/arborium-toml", version = "0.1.3" }
arborium-toml-plugin = { path = "crates/arborium-toml-plugin", version = "0.1.3" }
arborium-tsx = { path = "crates/arborium-tsx", version = "0.1.3" }
arborium-tsx-plugin = { path = "crates/arborium-tsx-plugin", version = "0.1.3" }
arborium-typescript = { path = "crates/arborium-typescript", version = "0.1.3" }
arborium-typescript-plugin = { path = "crates/arborium-typescript-plugin", version = "0.1.3" }
arborium-typst = { path = "crates/arborium-typst", version = "0.1.3" }
arborium-typst-plugin = { path = "crates/arborium-typst-plugin", version = "0.1.3" }
arborium-uiua = { path = "crates/arborium-uiua", version = "0.1.3" }
arborium-uiua-plugin = { path = "crates/arborium-uiua-plugin", version = "0.1.3" }
arborium-vb = { path = "crates/arborium-vb", version = "0.1.3" }
arborium-vb-plugin = { path = "crates/arborium-vb-plugin", version = "0.1.3" }
arborium-verilog = { path = "crates/arborium-verilog", version = "0.1.3" }
arborium-vhdl = { path = "crates/arborium-vhdl", version = "0.1.3" }
arborium-vhdl-plugin = { path = "crates/arborium-vhdl-plugin", version = "0.1.3" }
arborium-vim = { path = "crates/arborium-vim", version = "0.1.3" }
arborium-vue = { path = "crates/arborium-vue", version = "0.1.3" }
arborium-vue-plugin = { path = "crates/arborium-vue-plugin", version = "0.1.3" }
arborium-wire = { path = "crates/arborium-wire", version = "0.1.3" }
arborium-x86asm = { path = "crates/arborium-x86asm", version = "0.1.3" }
arborium-x86asm-plugin = { path = "crates/arborium-x86asm-plugin", version = "0.1.3" }
arborium-xml = { path = "crates/arborium-xml", version = "0.1.3" }
arborium-xml-plugin = { path = "crates/arborium-xml-plugin", version = "0.1.3" }
arborium-yaml = { path = "crates/arborium-yaml", version = "0.1.3" }
arborium-yaml-plugin = { path = "crates/arborium-yaml-plugin", version = "0.1.3" }
arborium-yuri = { path = "crates/arborium-yuri", version = "0.1.3" }
arborium-yuri-plugin = { path = "crates/arborium-yuri-plugin", version = "0.1.3" }
arborium-zig = { path = "crates/arborium-zig", version = "0.1.3" }
arborium-zig-plugin = { path = "crates/arborium-zig-plugin", version = "0.1.3" }
arborium-zsh = { path = "crates/arborium-zsh", version = "0.1.3" }
arborium-zsh-plugin = { path = "crates/arborium-zsh-plugin", version = "0.1.3" }

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/arborium"

# Optimize for size in release builds (especially important for  