[package]
name = "arborium-x86asm"
version = "0.1.0"
edition = "2024"
description = "x86asm grammar for arborium (tree-sitter bindings)"
license = "MIT"
repository = "https://github.com/bearcove/arborium"
keywords = ["tree-sitter", "x86asm", "syntax-highlighting"]
categories = ["parsing", "text-processing"]

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter-patched-arborium = { version = "0.25.10", path = "../../tree-sitter" }
arborium-sysroot = { version = "0.1.0", path = "../arborium-sysroot" }

[dev-dependencies]
arborium-test-harness = { version = "0.1.0", path = "../arborium-test-harness" }

[build-dependencies]
cc = { version = "1", features = ["parallel"] }
