[package]
name = "tree-sitter-language"
description = "The tree-sitter Language type, used by the library and by language implementations"
version = "0.1.5"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>", "Amaan Qureshi <amaanq12@gmail.com>"]
edition = "2021"
rust-version = "1.76"
readme = "README.md"
license = "MIT"
repository = "https://github.com/tree-sitter/tree-sitter"
categories = ["api-bindings", "development-tools::ffi", "parsing"]
publish = false

[lib]
path = "language.rs"
